# voice-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  mypy.ini  pyproject.toml
configs/: example.yaml
src/voice_orchestrator/: __init__.py  config.py  constants.py  logging.py  runpod.py  wandb.py  zenml.py
src/voice_orchestrator/cli/: __init__.py  dashboard.py  run.py
